--- a/Core-Translations/Resources/ErrorCodes.resx
+++ b/Core-Translations/Resources/ErrorCodes.resx
@@ -333,4 +333,7 @@
   <data name="validation_failed" xml:space="preserve">
     <value>Validation of the submitted data failed</value>
   </data>
+  <data name="user_no_member_of_user_group" xml:space="preserve">
+    <value>The user is no member of the user group</value>
+  </data>
 </root>
