--- a/HCore-Translations/Resources/ErrorCodes.resx
+++ b/HCore-Translations/Resources/ErrorCodes.resx
@@ -342,4 +342,10 @@
   <data name="scroll_uuid_too_long" xml:space="preserve">
     <value>The scroll UUID is too long</value>
   </data>
+  <data name="argument_invalid" xml:space="preserve">
+    <value>The argument is invalid</value>
+  </data>
+  <data name="argument_missing" xml:space="preserve">
+    <value>The argument is missing</value>
+  </data>
 </root>
