--- a/HCore-Translations/Resources/ErrorCodes.resx
+++ b/HCore-Translations/Resources/ErrorCodes.resx
@@ -177,11 +177,11 @@
   <data name="issuer_too_long" xml:space="preserve">
     <value>The issuer is too long</value>
   </data>
-  <data name="mandate_uuid_invalid" xml:space="preserve">
-    <value>The mandate UUID is invalid</value>
+  <data name="tenant_uuid_invalid" xml:space="preserve">
+    <value>The tenant UUID is invalid</value>
   </data>
-  <data name="mandate_uuid_too_long" xml:space="preserve">
-    <value>The mandate UUID is too long</value>
+  <data name="tenant_uuid_too_long" xml:space="preserve">
+    <value>The tenant UUID is too long</value>
   </data>
   <data name="max_paging_limit_exceeded" xml:space="preserve">
     <value>The paging limit must not exceed 50 records</value>
