--- a/HCore-Translations/Resources/ErrorCodes.resx
+++ b/HCore-Translations/Resources/ErrorCodes.resx
@@ -313,10 +313,13 @@
     <value>The user was not found</value>
   </data>
   <data name="user_uuid_invalid" xml:space="preserve">
-    <value>The user UUID is invalid</value>
+    <value>The user UUID contains invalid characters</value>
   </data>
   <data name="user_uuid_missing" xml:space="preserve">
     <value>The user UUID is missing</value>
+  </data>
+  <data name="user_uuid_too_long" xml:space="preserve">
+    <value>The user UUID is too long</value>
   </data>
   <data name="uuid_invalid" xml:space="preserve">
     <value>The UUID is invalid</value>
