--- a/HCore-Translations/Resources/Messages.resx
+++ b/HCore-Translations/Resources/Messages.resx
@@ -397,7 +397,7 @@
     <value>System user groups must contain at least one member</value>
   </data>
   <data name="backend_service_not_available" xml:space="preserve">
-    <value>A backend service is currently not available</value>
+    <value>The {name} backend service is currently not available</value>
   </data>
   <data name="email_already_exists" xml:space="preserve">
     <value>A user account with that email address already exists</value>
