--- a/HCore-Identity/Resources/Messages.resx
+++ b/HCore-Identity/Resources/Messages.resx
@@ -361,7 +361,7 @@
     <value>Your profile has been updated</value>
   </data>
   <data name="accept_privacy_policy" xml:space="preserve">
-    <value>I have read the {0} &lt;a href="{1}" target="_blank"&gt;Privacy Policy&lt;/a&gt;. I agree that my personal data will be collected and stored electronically to answer my request.</value>
+    <value>I have read the {0} &lt;a href="{1}" target="_blank"&gt;Privacy Policy&lt;/a&gt;. I agree that my personal data will be collected and stored electronically to fulfill our service.</value>
   </data>
   <data name="accept_terms_and_conditions" xml:space="preserve">
     <value>I accept the {0} &lt;a href="{1}" target="_blank"&gt;Terms and Conditions&lt;/a&gt;.</value>
